; ModuleID = '/home/carl/AnghaBench/kphp-kdb/common/extr_server-functions.c_adjust_oom_score.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/common/extr_server-functions.c_adjust_oom_score.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@adjust_oom_score.path = internal global [64 x i8] zeroinitializer, align 16
@adjust_oom_score.str = internal global [16 x i8] zeroinitializer, align 16
@.str = private unnamed_addr constant [23 x i8] c"/proc/%d/oom_score_adj\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"%d\00", align 1
@O_WRONLY = common dso_local global i32 0, align 4
@O_TRUNC = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [25 x i8] c"cannot write to %s : %m\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @adjust_oom_score(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %7 = call i32 (...) @getpid()
  %8 = call i32 @sprintf(i8* getelementptr inbounds ([64 x i8], [64 x i8]* @adjust_oom_score.path, i64 0, i64 0), i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %7)
  %9 = icmp slt i32 %8, 64
  %10 = zext i1 %9 to i32
  %11 = call i32 @assert(i32 %10)
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @sprintf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @adjust_oom_score.str, i64 0, i64 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i32 %12)
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* %4, align 4
  %15 = icmp sle i32 %14, 15
  %16 = zext i1 %15 to i32
  %17 = call i32 @assert(i32 %16)
  %18 = load i32, i32* @O_WRONLY, align 4
  %19 = load i32, i32* @O_TRUNC, align 4
  %20 = or i32 %18, %19
  %21 = call i32 @open(i8* getelementptr inbounds ([64 x i8], [64 x i8]* @adjust_oom_score.path, i64 0, i64 0), i32 %20)
  store i32 %21, i32* %5, align 4
  %22 = load i32, i32* %5, align 4
  %23 = icmp slt i32 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %1
  %25 = call i32 @kprintf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([64 x i8], [64 x i8]* @adjust_oom_score.path, i64 0, i64 0))
  store i32 -1, i32* %2, align 4
  br label %43

26:                                               ; preds = %1
  %27 = load i32, i32* %5, align 4
  %28 = load i32, i32* %4, align 4
  %29 = call i32 @write(i32 %27, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @adjust_oom_score.str, i64 0, i64 0), i32 %28)
  store i32 %29, i32* %6, align 4
  %30 = load i32, i32* %6, align 4
  %31 = icmp slt i32 %30, 0
  br i1 %31, label %32, label %36

32:                                               ; preds = %26
  %33 = call i32 @kprintf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([64 x i8], [64 x i8]* @adjust_oom_score.path, i64 0, i64 0))
  %34 = load i32, i32* %5, align 4
  %35 = call i32 @close(i32 %34)
  store i32 -1, i32* %2, align 4
  br label %43

36:                                               ; preds = %26
  %37 = load i32, i32* %5, align 4
  %38 = call i32 @close(i32 %37)
  %39 = load i32, i32* %6, align 4
  %40 = load i32, i32* %4, align 4
  %41 = icmp eq i32 %39, %40
  %42 = zext i1 %41 to i32
  store i32 %42, i32* %2, align 4
  br label %43

43:                                               ; preds = %36, %32, %24
  %44 = load i32, i32* %2, align 4
  ret i32 %44
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @sprintf(i8*, i8*, i32) #1

declare dso_local i32 @getpid(...) #1

declare dso_local i32 @open(i8*, i32) #1

declare dso_local i32 @kprintf(i8*, i8*) #1

declare dso_local i32 @write(i32, i8*, i32) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
